# L3bin

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
L3work/: L3bin_workingslow.cpp  L3files.R  L3get.R  L3getOLD.R  L3polys.R  L3read.R  RDSITIMING.r  bindex.Rdata  compileit  formatChange.R  get_vdata_info.c  hdfL3  hdfL3.cpp  l3bindump  l3bindump.c  prototype.R  rebinL3.R  runL3.R
R/: RcppExports.R  readL3.R
man/: L3bin-package.Rd  bin2lonlat.Rd  binlist.Rd  initlist.Rd  rcpp_hello_world.Rd  vdatainfo.Rd
src/: L3bin.cpp  RcppExports.cpp  vdatanames.cpp
